--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <head>
     <title>Dasmoto's Arts and Crafts</title>
-    <link rel='stylesheet' type='text/css' href='main.css'>
+    <link rel='stylesheet' type='text/css' href='style.css'>
   </head>
 
  <body>
